added some responsiveness

--- a/src/components/sidebar.html
+++ b/src/components/sidebar.html
@@ -1,5 +1,5 @@
 <aside id="default-sidebar"
-  class="fixed top-0 left-0 z-40 w-64 h-screen bg-sidebar_color text-white transition-transform -translate-x-full sm:translate-x-0"
+  class="fixed top-0 left-0 z-40 w-64 h-screen bg-sidebar_color text-white transition-transform -translate-x-full lg:translate-x-0"
   aria-label="Sidebar">
   <div class="h-full flex flex-col overflow-y-auto overflow-x-hidden custom-scrollbar" x-data="{
       menuToggle: $persist({
