--- a/src/output.css
+++ b/src/output.css
@@ -827,6 +827,11 @@
       outline-style: none;
     }
   }
+  .max-lg\:my-2 {
+    @media (width < 64rem) {
+      margin-block: calc(var(--spacing) * 2);
+    }
+  }
   .max-lg\:mt-1 {
     @media (width < 64rem) {
       margin-top: calc(var(--spacing) * 1);
@@ -835,6 +840,11 @@
   .max-lg\:mt-2 {
     @media (width < 64rem) {
       margin-top: calc(var(--spacing) * 2);
+    }
+  }
+  .max-lg\:mb-1 {
+    @media (width < 64rem) {
+      margin-bottom: calc(var(--spacing) * 1);
     }
   }
   .max-lg\:mb-3 {
@@ -935,9 +945,98 @@
       font-weight: var(--font-weight-semibold);
     }
   }
+  .max-md\:my-2 {
+    @media (width < 48rem) {
+      margin-block: calc(var(--spacing) * 2);
+    }
+  }
+  .max-md\:mt-2 {
+    @media (width < 48rem) {
+      margin-top: calc(var(--spacing) * 2);
+    }
+  }
+  .max-md\:mb-3 {
+    @media (width < 48rem) {
+      margin-bottom: calc(var(--spacing) * 3);
+    }
+  }
+  .max-md\:mb-10 {
+    @media (width < 48rem) {
+      margin-bottom: calc(var(--spacing) * 10);
+    }
+  }
+  .max-md\:mb-12 {
+    @media (width < 48rem) {
+      margin-bottom: calc(var(--spacing) * 12);
+    }
+  }
   .max-md\:h-14 {
     @media (width < 48rem) {
       height: calc(var(--spacing) * 14);
+    }
+  }
+  .max-md\:h-16 {
+    @media (width < 48rem) {
+      height: calc(var(--spacing) * 16);
+    }
+  }
+  .max-md\:w-full {
+    @media (width < 48rem) {
+      width: 100%;
+    }
+  }
+  .max-md\:px-0 {
+    @media (width < 48rem) {
+      padding-inline: calc(var(--spacing) * 0);
+    }
+  }
+  .max-md\:px-1 {
+    @media (width < 48rem) {
+      padding-inline: calc(var(--spacing) * 1);
+    }
+  }
+  .max-md\:px-3 {
+    @media (width < 48rem) {
+      padding-inline: calc(var(--spacing) * 3);
+    }
+  }
+  .max-md\:px-4 {
+    @media (width < 48rem) {
+      padding-inline: calc(var(--spacing) * 4);
+    }
+  }
+  .max-md\:py-2 {
+    @media (width < 48rem) {
+      padding-block: calc(var(--spacing) * 2);
+    }
+  }
+  .max-md\:pb-2 {
+    @media (width < 48rem) {
+      padding-bottom: calc(var(--spacing) * 2);
+    }
+  }
+  .max-md\:text-sm {
+    @media (width < 48rem) {
+      font-size: var(--text-sm);
+      line-height: var(--tw-leading, var(--text-sm--line-height));
+    }
+  }
+  .max-md\:text-xl {
+    @media (width < 48rem) {
+      font-size: var(--text-xl);
+      line-height: var(--tw-leading, var(--text-xl--line-height));
+    }
+  }
+  .max-md\:text-xs {
+    @media (width < 48rem) {
+      font-size: var(--text-xs);
+      line-height: var(--tw-leading, var(--text-xs--line-height));
+    }
+  }
+  .max-md\:font-semibold {
+    @media (width < 48rem) {
+      --tw-font-weight: var(--font-weight-semibold);
+      font-weight: var(--font-weight-semibold);
     }
   }
   .sm\:ml-80 {
