--- a/src/output.css
+++ b/src/output.css
@@ -375,6 +375,9 @@
   .h-20 {
     height: calc(var(--spacing) * 20);
   }
+  .h-36 {
+    height: calc(var(--spacing) * 36);
+  }
   .h-full {
     height: 100%;
   }
@@ -398,6 +401,9 @@
   }
   .w-12 {
     width: calc(var(--spacing) * 12);
+  }
+  .w-36 {
+    width: calc(var(--spacing) * 36);
   }
   .w-64 {
     width: calc(var(--spacing) * 64);
@@ -950,6 +956,11 @@
       margin-block: calc(var(--spacing) * 2);
     }
   }
+  .max-md\:mt-1 {
+    @media (width < 48rem) {
+      margin-top: calc(var(--spacing) * 1);
+    }
+  }
   .max-md\:mt-2 {
     @media (width < 48rem) {
       margin-top: calc(var(--spacing) * 2);
@@ -958,6 +969,16 @@
   .max-md\:mb-3 {
     @media (width < 48rem) {
       margin-bottom: calc(var(--spacing) * 3);
+    }
+  }
+  .max-md\:mb-5 {
+    @media (width < 48rem) {
+      margin-bottom: calc(var(--spacing) * 5);
+    }
+  }
+  .max-md\:mb-7 {
+    @media (width < 48rem) {
+      margin-bottom: calc(var(--spacing) * 7);
     }
   }
   .max-md\:mb-10 {
@@ -985,6 +1006,25 @@
       width: 100%;
     }
   }
+  .max-md\:space-y-3 {
+    @media (width < 48rem) {
+      :where(& > :not(:last-child)) {
+        --tw-space-y-reverse: 0;
+        margin-block-start: calc(calc(var(--spacing) * 3) * var(--tw-space-y-reverse));
+        margin-block-end: calc(calc(var(--spacing) * 3) * calc(1 - var(--tw-space-y-reverse)));
+      }
+    }
+  }
+  .max-md\:p-2 {
+    @media (width < 48rem) {
+      padding: calc(var(--spacing) * 2);
+    }
+  }
+  .max-md\:p-4 {
+    @media (width < 48rem) {
+      padding: calc(var(--spacing) * 4);
+    }
+  }
   .max-md\:px-0 {
     @media (width < 48rem) {
       padding-inline: calc(var(--spacing) * 0);
@@ -1008,6 +1048,11 @@
   .max-md\:py-2 {
     @media (width < 48rem) {
       padding-block: calc(var(--spacing) * 2);
+    }
+  }
+  .max-md\:pt-2 {
+    @media (width < 48rem) {
+      padding-top: calc(var(--spacing) * 2);
     }
   }
   .max-md\:pb-2 {
