--- a/src/output.css
+++ b/src/output.css
@@ -236,32 +236,14 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
-  .top-1 {
-    top: calc(var(--spacing) * 1);
-  }
-  .top-3 {
-    top: calc(var(--spacing) * 3);
-  }
   .top-5 {
     top: calc(var(--spacing) * 5);
   }
   .right-6 {
     right: calc(var(--spacing) * 6);
   }
-  .right-7 {
-    right: calc(var(--spacing) * 7);
-  }
   .left-0 {
     left: calc(var(--spacing) * 0);
-  }
-  .left-1 {
-    left: calc(var(--spacing) * 1);
-  }
-  .left-3 {
-    left: calc(var(--spacing) * 3);
-  }
-  .left-7 {
-    left: calc(var(--spacing) * 7);
   }
   .z-40 {
     z-index: 40;
@@ -274,9 +256,6 @@
   }
   .ms-0 {
     margin-inline-start: calc(var(--spacing) * 0);
-  }
-  .ms-3 {
-    margin-inline-start: calc(var(--spacing) * 3);
   }
   .mt-1 {
     margin-top: calc(var(--spacing) * 1);
@@ -292,18 +271,6 @@
   }
   .mt-6 {
     margin-top: calc(var(--spacing) * 6);
-  }
-  .mr-10 {
-    margin-right: calc(var(--spacing) * 10);
-  }
-  .mr-60 {
-    margin-right: calc(var(--spacing) * 60);
-  }
-  .mr-80 {
-    margin-right: calc(var(--spacing) * 80);
-  }
-  .mr-100 {
-    margin-right: calc(var(--spacing) * 100);
   }
   .mb-1 {
     margin-bottom: calc(var(--spacing) * 1);
@@ -354,29 +321,17 @@
     width: calc(var(--spacing) * 8);
     height: calc(var(--spacing) * 8);
   }
-  .h-2 {
-    height: calc(var(--spacing) * 2);
-  }
   .h-3 {
     height: calc(var(--spacing) * 3);
   }
   .h-4 {
     height: calc(var(--spacing) * 4);
   }
-  .h-6 {
-    height: calc(var(--spacing) * 6);
-  }
-  .h-10 {
-    height: calc(var(--spacing) * 10);
-  }
   .h-12 {
     height: calc(var(--spacing) * 12);
   }
   .h-20 {
     height: calc(var(--spacing) * 20);
-  }
-  .h-36 {
-    height: calc(var(--spacing) * 36);
   }
   .h-full {
     height: 100%;
@@ -393,26 +348,11 @@
   .w-4 {
     width: calc(var(--spacing) * 4);
   }
-  .w-6 {
-    width: calc(var(--spacing) * 6);
-  }
-  .w-10 {
-    width: calc(var(--spacing) * 10);
-  }
   .w-12 {
     width: calc(var(--spacing) * 12);
   }
-  .w-36 {
-    width: calc(var(--spacing) * 36);
-  }
-  .w-64 {
-    width: calc(var(--spacing) * 64);
-  }
   .w-full {
     width: 100%;
-  }
-  .w-screen {
-    width: 100vw;
   }
   .flex-1 {
     flex: 1;
@@ -523,9 +463,6 @@
   .border-gray-700 {
     border-color: var(--color-gray-700);
   }
-  .border-white {
-    border-color: var(--color-white);
-  }
   .bg-black {
     background-color: var(--color-black);
   }
@@ -547,12 +484,6 @@
   .p-1 {
     padding: calc(var(--spacing) * 1);
   }
-  .p-1\.5 {
-    padding: calc(var(--spacing) * 1.5);
-  }
-  .p-2 {
-    padding: calc(var(--spacing) * 2);
-  }
   .p-8 {
     padding: calc(var(--spacing) * 8);
   }
@@ -562,9 +493,6 @@
   .px-0 {
     padding-inline: calc(var(--spacing) * 0);
   }
-  .px-1 {
-    padding-inline: calc(var(--spacing) * 1);
-  }
   .px-3 {
     padding-inline: calc(var(--spacing) * 3);
   }
@@ -573,9 +501,6 @@
   }
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
-  }
-  .py-2 {
-    padding-block: calc(var(--spacing) * 2);
   }
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
@@ -612,9 +537,6 @@
   }
   .pb-16 {
     padding-bottom: calc(var(--spacing) * 16);
-  }
-  .pl-0 {
-    padding-left: calc(var(--spacing) * 0);
   }
   .pl-5 {
     padding-left: calc(var(--spacing) * 5);
@@ -833,122 +755,9 @@
       outline-style: none;
     }
   }
-  .max-lg\:my-2 {
-    @media (width < 64rem) {
-      margin-block: calc(var(--spacing) * 2);
-    }
-  }
-  .max-lg\:mt-1 {
-    @media (width < 64rem) {
-      margin-top: calc(var(--spacing) * 1);
-    }
-  }
-  .max-lg\:mt-2 {
-    @media (width < 64rem) {
-      margin-top: calc(var(--spacing) * 2);
-    }
-  }
-  .max-lg\:mb-1 {
-    @media (width < 64rem) {
-      margin-bottom: calc(var(--spacing) * 1);
-    }
-  }
-  .max-lg\:mb-3 {
-    @media (width < 64rem) {
-      margin-bottom: calc(var(--spacing) * 3);
-    }
-  }
-  .max-lg\:mb-10 {
-    @media (width < 64rem) {
-      margin-bottom: calc(var(--spacing) * 10);
-    }
-  }
-  .max-lg\:mb-12 {
-    @media (width < 64rem) {
-      margin-bottom: calc(var(--spacing) * 12);
-    }
-  }
   .max-lg\:h-16 {
     @media (width < 64rem) {
       height: calc(var(--spacing) * 16);
-    }
-  }
-  .max-lg\:w-full {
-    @media (width < 64rem) {
-      width: 100%;
-    }
-  }
-  .max-lg\:space-y-3 {
-    @media (width < 64rem) {
-      :where(& > :not(:last-child)) {
-        --tw-space-y-reverse: 0;
-        margin-block-start: calc(calc(var(--spacing) * 3) * var(--tw-space-y-reverse));
-        margin-block-end: calc(calc(var(--spacing) * 3) * calc(1 - var(--tw-space-y-reverse)));
-      }
-    }
-  }
-  .max-lg\:p-2 {
-    @media (width < 64rem) {
-      padding: calc(var(--spacing) * 2);
-    }
-  }
-  .max-lg\:px-0 {
-    @media (width < 64rem) {
-      padding-inline: calc(var(--spacing) * 0);
-    }
-  }
-  .max-lg\:px-1 {
-    @media (width < 64rem) {
-      padding-inline: calc(var(--spacing) * 1);
-    }
-  }
-  .max-lg\:px-3 {
-    @media (width < 64rem) {
-      padding-inline: calc(var(--spacing) * 3);
-    }
-  }
-  .max-lg\:px-4 {
-    @media (width < 64rem) {
-      padding-inline: calc(var(--spacing) * 4);
-    }
-  }
-  .max-lg\:py-2 {
-    @media (width < 64rem) {
-      padding-block: calc(var(--spacing) * 2);
-    }
-  }
-  .max-lg\:pt-2 {
-    @media (width < 64rem) {
-      padding-top: calc(var(--spacing) * 2);
-    }
-  }
-  .max-lg\:pb-2 {
-    @media (width < 64rem) {
-      padding-bottom: calc(var(--spacing) * 2);
-    }
-  }
-  .max-lg\:text-sm {
-    @media (width < 64rem) {
-      font-size: var(--text-sm);
-      line-height: var(--tw-leading, var(--text-sm--line-height));
-    }
-  }
-  .max-lg\:text-xl {
-    @media (width < 64rem) {
-      font-size: var(--text-xl);
-      line-height: var(--tw-leading, var(--text-xl--line-height));
-    }
-  }
-  .max-lg\:text-xs {
-    @media (width < 64rem) {
-      font-size: var(--text-xs);
-      line-height: var(--tw-leading, var(--text-xs--line-height));
-    }
-  }
-  .max-lg\:font-semibold {
-    @media (width < 64rem) {
-      --tw-font-weight: var(--font-weight-semibold);
-      font-weight: var(--font-weight-semibold);
     }
   }
   .max-md\:my-2 {
@@ -971,6 +780,11 @@
       margin-bottom: calc(var(--spacing) * 3);
     }
   }
+  .max-md\:mb-4 {
+    @media (width < 48rem) {
+      margin-bottom: calc(var(--spacing) * 4);
+    }
+  }
   .max-md\:mb-5 {
     @media (width < 48rem) {
       margin-bottom: calc(var(--spacing) * 5);
@@ -991,14 +805,19 @@
       margin-bottom: calc(var(--spacing) * 12);
     }
   }
+  .max-md\:block {
+    @media (width < 48rem) {
+      display: block;
+    }
+  }
+  .max-md\:inline-block {
+    @media (width < 48rem) {
+      display: inline-block;
+    }
+  }
   .max-md\:h-14 {
     @media (width < 48rem) {
       height: calc(var(--spacing) * 14);
-    }
-  }
-  .max-md\:h-16 {
-    @media (width < 48rem) {
-      height: calc(var(--spacing) * 16);
     }
   }
   .max-md\:w-full {
@@ -1015,6 +834,11 @@
       }
     }
   }
+  .max-md\:overflow-x-auto {
+    @media (width < 48rem) {
+      overflow-x: auto;
+    }
+  }
   .max-md\:p-2 {
     @media (width < 48rem) {
       padding: calc(var(--spacing) * 2);
@@ -1023,6 +847,11 @@
   .max-md\:p-4 {
     @media (width < 48rem) {
       padding: calc(var(--spacing) * 4);
+    }
+  }
+  .max-md\:p-8 {
+    @media (width < 48rem) {
+      padding: calc(var(--spacing) * 8);
     }
   }
   .max-md\:px-0 {
@@ -1045,14 +874,14 @@
       padding-inline: calc(var(--spacing) * 4);
     }
   }
+  .max-md\:py-1 {
+    @media (width < 48rem) {
+      padding-block: calc(var(--spacing) * 1);
+    }
+  }
   .max-md\:py-2 {
     @media (width < 48rem) {
       padding-block: calc(var(--spacing) * 2);
-    }
-  }
-  .max-md\:pt-1 {
-    @media (width < 48rem) {
-      padding-top: calc(var(--spacing) * 1);
     }
   }
   .max-md\:pt-2 {
@@ -1060,9 +889,19 @@
       padding-top: calc(var(--spacing) * 2);
     }
   }
+  .max-md\:pt-4 {
+    @media (width < 48rem) {
+      padding-top: calc(var(--spacing) * 4);
+    }
+  }
   .max-md\:pb-2 {
     @media (width < 48rem) {
       padding-bottom: calc(var(--spacing) * 2);
+    }
+  }
+  .max-md\:pb-8 {
+    @media (width < 48rem) {
+      padding-bottom: calc(var(--spacing) * 8);
     }
   }
   .max-md\:pl-0 {
@@ -1099,19 +938,9 @@
       margin-left: calc(var(--spacing) * 80);
     }
   }
-  .sm\:hidden {
-    @media (width >= 40rem) {
-      display: none;
-    }
-  }
   .sm\:rounded-lg {
     @media (width >= 40rem) {
       border-radius: var(--radius-lg);
-    }
-  }
-  .md\:hidden {
-    @media (width >= 48rem) {
-      display: none;
     }
   }
   .md\:w-1\/2 {
